# particles_vk

./: .gitignore  CMakeLists.txt  README.md  VulkanApp.cpp  VulkanApp.h  compile_shader.bat  main.cpp  main_application.cpp
application/: descriptor_manager.cpp  onscreen.cpp  shadow_map.cpp
assets/shaders/: dir_shadow.vert  particles.frag  particles.geom  particles.vert  static_scene.frag  static_scene.vert
assets/textures/: samples.hdr
particles/: particle.cpp  particle_engine.cpp  particle_engine.h  particle_pool.cpp  particle_pool.h  particle_renderer.cpp  particle_renderer.h  particle_renderer_init.cpp  particle_renderer_other.cpp  particle_types.cpp  particle_types.h  particles.h  static_particle_engine.cpp  vertex.cpp
random/: random.cpp  random.h
